--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "4",
+    "axios": "^0.27.2",
     "phosphor-react-native": "^1.1.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
@@ -18,6 +19,7 @@
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "^2.8.0",
     "react-native-svg": "^12.3.0",
+    "react-native-view-shot": "^3.3.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
